--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "server": "json-server ./server/api/db.json --watch",
+    "start": "concurrently 'yarn server' 'ng serve --watch --o'",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -12,7 +13,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.10",
+    "@angular/animations": "^12.1.2",
     "@angular/common": "~11.2.10",
     "@angular/compiler": "~11.2.10",
     "@angular/core": "~11.2.10",
@@ -20,6 +21,11 @@
     "@angular/platform-browser": "~11.2.10",
     "@angular/platform-browser-dynamic": "~11.2.10",
     "@angular/router": "~11.2.10",
+    "boostrap": "^2.0.0",
+    "bootstrap": "^5.0.2",
+    "concurrently": "^6.2.0",
+    "json-server": "^0.16.3",
+    "ngx-toastr": "^14.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
